# philpax.github.io

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  config.toml  generate_pr_list.py  index.html  robots.txt  shell.nix  sitemap.xml  style.css
.github/workflows/: ci.yml  deploy.yml  main.yml
about/: index.html
assets/baked/: music.json
assets/baked/syntax/: syntax_set.packdump  theme_set.packdump
assets/source/: 88x31.xcf
assets/source/syntax/: README.md  ayu-light.sublime-color-scheme
bake_assets/: Cargo.toml
bake_assets/src/: README.md  icon.rs  main.rs
bake_assets/src/syntax/: mod.rs  sublime_color_scheme.rs
blog/: index.html
blog/abusing-the-c-preprocessor/: index.html
blog/abusing-the-c-preprocessor-writing-a-4-bit-adder/: index.html
blog/heady-house-hunting-with-d/: house1.html  house2.html  index.html
blog/ocufabulous/: index.html
build_syntect_assets/: Cargo.toml
build_syntect_assets/src/: Pug.sublime-syntax  main.rs
build_syntect_syntaxset/: Cargo.toml
build_syntect_syntaxset/src/: Pug.sublime-syntax  main.rs
color/: purple.css
content/: about.md  credits.md
content/about/: index.md
content/blog/: abusing-the-c-preprocessor.md
content/blog/abusing-the-c-preprocessor/: index.md
content/blog/apple-xr-is-going-to-change-everything/: index.md
content/blog/heady-house-hunting-with-d/: houselist.html  index.md
content/blog/hello-again/: hero.txt  index.md
content/blog/now-is-the-time-to-get-into-xr-development/: index.md
content/blog/ocufabulous/: index.md
content/blog/we-need-a-xros/: index.md
content/blog/xr-is-the-next-computing-frontier/: index.md
content/notes/: index.md
content/notes/AI/: Training a FLUX LoRA locally with NixOS.md  index.md
content/notes/Hardware/: Laptop.md  Server.md  VR Headsets.md  VR_Headsets.md  Workstation.md  index.md
content/notes/Media/: Games for the AYN Thor.md  Music.md  index.md
content/notes/Other Peoples' Talks/FOSDEM 2026/: Closing the Loop - A Self-Learning Compiler for AI Accelerators.md  Multimodal support in llama.cpp - Achievements and Future Directions.md  Zero to matmul with the ET-SoC-1.md  index.md  skiftOS - Building a microkernel-based operating system from the ground up.md
content/notes/Other_Peoples'_Talks/: index.md
content/notes/Other_Peoples'_Talks/FOSDEM_2026/: AT_-_The_Billion-Edge_Open_Social_Graph.md  BLUE_-_A_generic_build-system_crafted_entirely_in_Guile.md  Bevy_Engine_BOF_-_Demo_and_chat.md  Breaking_architecture_barriers_-_Running_x86_games_on_ARM.md  Building_a_minimal_cross-platform_terminal_UI_library.md  Capability_Based_Security_in_Redox.md  Closing_the_Loop_-_A_Self-Learning_Compiler_for_AI_Accelerators.md  Crystal_-_A_language_for_humans_and_computers.md  Decentralized_Public_Broadcast_with_Streamplace.md  Leveling_Up_OpenXR_-_New_Extensions,_Better_Workflows,_and_Advances_in_Open-Source_Gaming.md  Multimodal_support_in_llama.cpp_-_Achievements_and_Future_Directions.md  Porting_game_engine_renderer_to_Vulkan_as_an_absolute_beginner.md  Radicle_-_Local-First_Code_Collaboration.md  SlimeVR_Full_Body_Tracking.md  (+9 more)
content/notes/Personal/: Giftlist.md  Music.md  Studying Swedish and Japanese simultaneously.md  Studying_Swedish_and_Japanese_simultaneously.md  index.md
content/notes/Programming/: Reasons I do not like Python.md  Using uv to ship a Python application.md  Using_uv_to_ship_a_Python_application.md  index.md
content/notes/Server/: Self-hosted_photo_library.md  index.md
content/notes/Sysadmin/: index.md
content/notes/Talks/: index.md
content/updates/a-mostly-quiet-week/: index.md
content/updates/an-even-quieter-week/: index.md
content/updates/first-update/: index.md
content/updates/its-finally-a-music-player/: index.md
content/updates/mending-photos-not-hearts/: index.md
content/updates/one-day-ill-finish-a-vr-mod/: index.md
content/updates/only-so-much-steam/: index.md
content/updates/the-big-claude-down/: index.md
content/updates/two-weeks-go-by/: index.md
content/updates/ups-and-downs-and-sides-to-sides/: index.md
content/updates/when-you-add-an-updates-section/: index.md
content/updates/yall-hear-about-this-game/: index.md
layout/: index.kdl
page/1/: index.html
paxcss/: Cargo.toml
paxcss/src/: lib.rs
paxgen/: Cargo.toml
paxgen/src/: config.rs  content.rs  lib.rs  rss.rs  util.rs  views.rs
paxgen/src/html/: builder.rs  mod.rs
paxhtml/: Cargo.toml
paxhtml/src/: attribute.rs  builder.rs  document.rs  element.rs  lib.rs  render_element.rs  routing.rs  util.rs
paxhtml_macro/: Cargo.toml
paxhtml_macro/src/: lib.rs
paxsite-cli/: Cargo.toml
paxsite-cli/src/: main.rs
paxsite-content/: Cargo.toml
paxsite-content/src/: lib.rs
sass/color/: purple.scss
src/: config.rs  content.rs  elements.rs  fonts.rs  image_store.rs  main.rs  markdown.rs  og_image.rs  rss.rs  serve.rs  styles.rs  tailwind.rs  timer.rs  util.rs
src/html/: builder.rs  mod.rs
src/js/: mod.rs  reload.js  style-debugger.js  syntax.js  website.js
src/styles/: mod.rs  reset.css  tailwind.css  tailwind.rs  website.css
src/syntax/: mod.rs  syntax.js  syntax_set.packdump  theme_set.packdump
src/views/: blog.rs  collection.rs  credits.rs  frontpage.rs  main.rs  mod.rs  partials.rs  tags.rs
src/views/blog/: mod.rs  partials.rs  tags.rs
src/views/components/: city_poster.rs  code.rs  date.rs  diff_stats.rs  footnote.rs  heading_anchor.rs  inline_code.rs  link.rs  mod.rs  music_library.rs  notes_index.rs
src/views/notes/: mod.rs
src/views/posts/: mod.rs
src/views/updates/: mod.rs
static/: download_fonts.py  font-picker.js  style-debugger.js  website.js
static/experimental/perchance/: index.html
static/experimental/prismata/: index.html  prismata_client.js
static/experimental/wikitext/: index.html
tags/: index.html
tags/c/: index.html
tags/cursed/: index.html
tags/d/: index.html
tags/xr/: index.html
themes/perm/: README.md
themes/perm/sass/: _buttons.scss  _font.scss  _header.scss  _main.scss  _post.scss  _variables.scss
themes/perm/templates/: page.html  section.html
(+62 files in other folders)
