[package]
name = "paxsite"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "bake_assets", "paxcss"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
syntect = "5.2"
image = { version = "0.25.1", features = [
    "png",
    "ico",
], default-features = false }
resvg = "0.44"
usvg = "0.44"
fontdb = "0.22"
rayon = "1.10"

[dependencies]
paxhtml = { git = "https://github.com/philpax/paxhtml.git" }
paxhtml_tailwind = { git = "https://github.com/philpax/paxhtml.git" }
# paxhtml = { path = "../paxhtml/paxhtml" }
# paxhtml_tailwind = { path = "../paxhtml/paxhtml_tailwind" }

blackbird-json-export-types = { git = "https://github.com/philpax/blackbird.git" }
# blackbird-json-export-types = { path = "../blackbird/blackbird-json-export-types" }

# serve
sha1 = { version = "0.10.6", optional = true }

anyhow = { workspace = true }
base64 = "0.22.1"
chrono = { version = "0.4.37", default-features = false, features = [
    "std",
    "now",
] }
markdown = "1.0.0"
rss = { version = "2.0.7", features = ["atom"] }
serde = { workspace = true }
serde_json = { workspace = true }
syntect = { workspace = true }
toml = "0.8.12"
paxcss = { path = "paxcss" }
toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
resvg = { workspace = true }
usvg = { workspace = true }
fontdb = { workspace = true }
rayon = { workspace = true }

[features]
serve = ["dep:sha1"]
dump_tree = ["paxhtml/dump_tree"]

[profile.dev.package]
image.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
syntect.opt-level = 3
