[package]
name = "paxsite"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "bake_assets", "paxcss", "paxsite-content", "paxsite-cli"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
arborium = { version = "2.4", default-features = false, features = [
    "lang-bash",
    "lang-c",
    "lang-css",
    "lang-d",
    "lang-html",
    "lang-lua",
    "lang-nix",
    "lang-python",
    "lang-ruby",
    "lang-toml",
    "lang-powershell"
] }
image = { version = "0.25.1", features = [
    "png",
    "ico",
    "jpeg",
], default-features = false }
resvg = "0.44"
usvg = "0.44"
fontdb = "0.22"
rayon = "1.10"
chrono = { version = "0.4.37", default-features = false, features = [
    "std",
    "now",
] }
toml = "0.8.12"
toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
paxhtml = { git = "https://github.com/philpax/paxhtml.git" }
paxhtml_tailwind = { git = "https://github.com/philpax/paxhtml.git" }
# paxhtml = { path = "../paxhtml/paxhtml" }
# paxhtml_tailwind = { path = "../paxhtml/paxhtml_tailwind" }
blackbird-json-export-types = { git = "https://github.com/philpax/blackbird.git" }
# blackbird-json-export-types = { path = "../blackbird/blackbird-json-export-types" }

[dependencies]
paxhtml = { workspace = true }
paxhtml_tailwind = { workspace = true }
blackbird-json-export-types = { workspace = true }

# serve
sha1 = { version = "0.10.6", optional = true }

anyhow = { workspace = true }
base64 = "0.22.1"
chrono = { workspace = true }
markdown = "1.0.0"
rss = { version = "2.0.7", features = ["atom"] }
serde = { workspace = true }
serde_json = { workspace = true }
arborium = { workspace = true }
toml = { workspace = true }
paxcss = { path = "paxcss" }
paxsite-content = { path = "paxsite-content" }
toml-datetime-compat = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
fontdb = { workspace = true }
rayon = { workspace = true }

[features]
serve = ["dep:sha1"]
dump_tree = ["paxhtml/dump_tree"]

[profile.dev.package]
image.opt-level = 3
crc32fast.opt-level = 3
miniz_oxide.opt-level = 3
png.opt-level = 3
markdown.opt-level = 3
unicode-id.opt-level = 3
arborium.opt-level = 3
arborium-bash.opt-level = 3
arborium-c.opt-level = 3
arborium-css.opt-level = 3
arborium-d.opt-level = 3
arborium-highlight.opt-level = 3
arborium-html.opt-level = 3
arborium-javascript.opt-level = 3
arborium-lua.opt-level = 3
arborium-nix.opt-level = 3
arborium-python.opt-level = 3
arborium-ruby.opt-level = 3
arborium-theme.opt-level = 3
arborium-toml.opt-level = 3
arborium-tree-sitter.opt-level = 3
