[package]
name = "paxgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
chrono = { workspace = true }

html-escape = "0.2.13"
markdown = "1.0.0-alpha.16"
toml = "0.8.12"
toml-datetime-compat = { version = "0.2.0", features = ["chrono"] }
rss = { version = "2.0.7", features = ["atom"] }
